--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ span {
   padding-left: 40px;
   padding-right: 20px;
   width: 200px;
+ 
 }
 
 
@@ -166,6 +167,12 @@ span {
 .orange-text {
 
   color: #F5AE23;
+}
+
+.projectimage {
+	
+	cursor:pointer;
+	
 }
 
 
